# activeinference-icub

./: README.md  copyright.txt
src/: ConfigStructs.h  FreeEnergyOptimization.cpp  FreeEnergyOptimization.h  ICubControl.cpp  ICubControl.h  ICubImage.cpp  ICubImage.h  ICubKinematics.cpp  ICubKinematics.h  ICubTouch.cpp  ICubTouch.h  YarpPeriodic.cpp  YarpPeriodic.h
src/activeInference2D/: Action.cpp  Action.h  Attractor.cpp  Attractor.h  CMakeLists.txt  FirstDerivative.cpp  FirstDerivative.h  SecondDerivative.cpp  SecondDerivative.h  config.ini  head_config.ini  la_config.ini  main.cpp  ra_config.ini
src/activeInference3D/: Action.cpp  Action.h  Attractor.cpp  Attractor.h  CMakeLists.txt  FirstDerivative.cpp  FirstDerivative.h  SecondDerivative.cpp  SecondDerivative.h  config.ini  head_config.ini  la_config.ini  main.cpp  ra_config.ini
